--- a/aspnet-core/src/SuperAbp.MenuManagement.Domain.Shared/Localization/MenuManagement/zh-Hans.json
+++ b/aspnet-core/src/SuperAbp.MenuManagement.Domain.Shared/Localization/MenuManagement/zh-Hans.json
@@ -4,6 +4,8 @@
     "ManageYourProfile": "管理个人资料",
     "NewMenu": "新菜单",
     "Menu": "菜单",
+    "Menu:Menu": "菜单",
+    "Menus": "菜单",
     "Placeholder": "请输入{0}",
     "ChoosePlaceholder": "请选择{0}",
     "Reset": "重置",
